# cookiecutter-shellscript-autotools

./: .travis.yml  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
{{cookiecutter.project_name}}/test/: Makefile.am  helper.sh  test-{{cookiecutter.project_name}}.bats.in  test-{{cookiecutter.project_name}}.sh
