#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([{{ cookiecutter.project_name }}], [{{ cookiecutter.version }}], [{{ cookiecutter.email }}])
AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 bin/Makefile
                 test/Makefile
                 vendor/Makefile])
AC_OUTPUT([bin/{{ cookiecutter.project_name }}])
